--- a/analyse-naissances-2014.ipynb
+++ b/analyse-naissances-2014.ipynb
@@ -167,8 +167,9 @@
     "\n",
     "On trace une loi normale qui approche notre loi binomiale avec comme paramètres :\n",
     "\n",
-    "Espérance : la probabilité H0 qui est de 0.5, donc l'espérance \"moyenne\"\n",
-    "Ecart-type : L'écart-type divisé par le nombre d'individus, donc l'écart type \"moyen\""
+    "Espérance : la probabilité H0 qui est de 0.5\n",
+    "\n",
+    "Ecart-type : l'écart-type divisé par le nombre d'individus"
    ]
   },
   {
