--- a/analyse-naissances-2014.ipynb
+++ b/analyse-naissances-2014.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "## Calculs des différentes valeurs \n",
     "\n",
-    "Même si ce n'est pas demandé, on peut calculer l'intervalle de confiance au seuil de 5%, pour voir si notre fréquence observée est dedans. On souhaite regarder seulement à \"droite\", donc cet interval n'est pas pertinent car il contient des valeurs qui ne nous intéressent pas. Mais disons que si notre fréquence observée est dans cet interval, on peut d'ores-et-déjà valider l'hypothèse H0.\n",
+    "Même si ce n'est pas demandé, on peut calculer l'intervalle de confiance au seuil de 5%, pour voir si notre fréquence observée est dedans. On souhaite regarder seulement à \"droite\", donc cet intervalle n'est pas pertinent car il contient des valeurs qui ne nous intéressent pas. Mais disons que si notre fréquence observée est dans cet intervalle, on peut d'ores-et-déjà valider l'hypothèse H0.\n",
     "\n",
     "On calcule, par curiosité, le Percent-Point function au dessus duquel on est à 97.5%. Il est implicitement utilisé par la méthode précédente. On voit que pour une loi normale centrée réduite, dans 97.5% des cas, on sera sur une valeur supérieure ou égale à 1,96 z-score.\n",
     "\n",
